--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -88,7 +88,7 @@ padding-top: 20px;
   --bs-link-color: #2a92b5;
   --bs-link-hover-color: #70b7d3;
   --bs-code-color: #d63384;
-  --bs-highlight-bg: #fff3cd;
+  --bs-highlight-bg: #b7e7f5;
 }
 
 *,
